--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "faker": "^6.6.6",
     "mssql": "^10.0.2",
     "sequelize": "^6.35.2",
     "tedious": "^16.6.1",
