Changes in .env file Redirected to SQL Server Instance

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DB_HOST = "localhost"
-DB_USER = "mdh"
+DB_HOST = "35.200.131.174"
+DB_USER = "sqlserver"
 DB_NAME= "MindfulHub"
-DB_PASSWORD = "123456"
+DB_PASSWORD = "Creation@1357"
 DB_PORT = "1433"
