Changes in Endpoint of Database

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DB_HOST = "35.200.131.174"
+DB_HOST = "34.171.95.201"
 DB_USER = "sqlserver"
-DB_NAME= "MindfulHub"
-DB_PASSWORD = "Creation@1357"
+DB_NAME= "MindfulHub-dost"
+DB_PASSWORD = "Nitish@1998"
 DB_PORT = "1433"
